--- a/assets/cloudformation/config.yaml
+++ b/assets/cloudformation/config.yaml
@@ -11,9 +11,12 @@ Resources:
       Source:
         Owner: AWS
         SourceIdentifier: ${rule.identifier}
-      %{ if length(rule.inputs) > 0 }InputParameters:
-          %{ for key, value in rule.inputs }${key}: "${value}"%{ endfor }
-      %{ endif }
+        %{ if length(rule.inputs) > 0 }
+        InputParameters:
+          %{ for key, value in rule.inputs }
+          ${key}: "${value}"
+          %{ endfor }
+        %{ endif }
       Scope:
         ComplianceResourceTypes:
           %{ for resource_type in rule.resource_types }- "${resource_type}"%{ endfor }
