chore: trying to understand the error

--- a/assets/cloudformation/config.yaml
+++ b/assets/cloudformation/config.yaml
@@ -3,7 +3,8 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: Used to distribute the managed config rules to for "${name}" rule group
 
 Resources:
-  %{ for name, rule in rules ~}${name}:
+  %{ for name, rule in rules }
+  ${name}:
     Type: "AWS::Config::ConfigRule"
     Properties:
       ConfigRuleName: ${name}
@@ -13,6 +14,8 @@ Resources:
         SourceIdentifier: ${rule.identifier}
       Scope:
         ComplianceResourceTypes:
-          %{ for resource_type in rule.resource_types }- "${resource_type}"%{ endfor }
+          %{ for resource_type in rule.resource_types }
+          - "${resource_type}"
+          %{ endfor }
       MaximumExecutionFrequency: "${rule.max_execution_frequency}"
   %{ endfor }
