--- a/assets/cloudformation/config.yaml
+++ b/assets/cloudformation/config.yaml
@@ -14,14 +14,12 @@ Resources:
         SourceIdentifier: ${rule.identifier}
         %{ if length(rule.inputs) > 0 }
         InputParameters:
-          %{ for key, value in rule.inputs }
-          "${key}": "${value}"
+          %{ for key, value in rule.inputs }${key}: "${value}"
           %{ endfor }
         %{ endif }
       Scope:
         ComplianceResourceTypes:
           %{ for resource_type in rule.resource_types }
-          - "${resource_type}"
-          %{ endfor -}
+          - "${resource_type}"%{ endfor }
       MaximumExecutionFrequency: "${rule.max_execution_frequency}"
   %{ endfor }
